--- a/FenixAutomat.csproj
+++ b/FenixAutomat.csproj
@@ -59,9 +59,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="FenixHelper">
-      <HintPath>..\FenixHelper\bin\Debug\FenixHelper.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Exchange.WebServices, Version=15.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLL\Microsoft.Exchange.WebServices.dll</HintPath>
@@ -317,7 +314,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\FenixHelper\FenixHelper.csproj">
+      <Project>{7685fa4c-d022-4cc0-b5f3-6d4354ef8c9c}</Project>
+      <Name>FenixHelper</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
